# trimui-rom-downloader

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  sources.yaml.example
ROM Downloader.pak/: README.md  launch.sh
docs/: architecture.md  backend.md  build.md  config.md  data-flow.md  rendering.md
src/: app.rs  backend.rs  background.rs  browser.rs  cache.rs  config.rs  download.rs  error.rs  input.rs  install_dir.rs  intro.rs  library.rs  loading.rs  main.rs  menu.rs  mygames.rs  scene.rs  text.rs  texture.rs  widget.rs
testdata/: mygames_example.yaml
