[package]
name = "trimui-rom-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = "0.38.0"
image = "0.25"
fontdue = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }
