[package]
name = "trimui-rom-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = "0.38.0"
image = "0.25"
fontdue = "0.9"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde_json = "1"
urlencoding = "2"
